--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "dropox-client",
-  "version": "1.0.0",
-  "description": "client side of dropox project",
-  "main": "index.js",
-  "repository": "git@github.com:yogevmalcaym/dropox.git",
-  "author": "Yogev malca",
-  "license": "MIT",
-  "dependencies": {
-    "chalk": "^3.0.0",
-    "inquirer": "^7.0.1"
-  }
+	"type": "module",
+	"name": "dropox-client",
+	"version": "1.0.0",
+	"description": "client side of dropox project",
+	"main": "index.js",
+	"repository": "git@github.com:yogevmalcaym/dropox.git",
+	"author": "Yogev malca",
+	"license": "MIT",
+	"dependencies": {
+		"chalk": "^3.0.0",
+		"inquirer": "^7.0.1"
+	},
+	"scripts": {
+		"start": " node --experimental-modules --experimental-json-modules index.js"
+	}
 }
